Asset Browser Search Bar not working #87627

Closed
opened 2021-04-19 14:10:57 +02:00 by Jan Ahrens · 13 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-19 10:20, hash: eb06ccc324
Worked: --

Short description of error
The Asset Browser Search is not working

Exact steps for others to reproduce the error
I can mark objects as Asset and they appear in the Asset Browser. However when I use the Asset Browser Search Bar nothing is found, all Assets just disappear out of the view. Works neither with names nor with tags.
Testing with Default Cubes:

  • Use the outliner to mark a bunch of duplicated cubes as Assets one by one. Naming is Cube.001, Cube.002 etc.
  • They appear in the Asset Browser window.
  • Type "C" in the search bar - all cubes still visible, even one that I've named "Heiko".
  • Type the next letter "u" - all cubes dissapear from the Asset Browser view.

I am not sure if it is a bug, or not implemented. But if not implemented - it should either do nothing, show a warning, or the UI element shouldn't even be there or be greyed out. Since the Asset Browser is the only new Feature in 3.0 for now I am quite confused why it is not working and I guess others will be too...

Thanks for looking at this, <3 Blender!

Test file :
#87627.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-19 10:20, hash: `eb06ccc324` Worked: -- **Short description of error** The Asset Browser Search is not working **Exact steps for others to reproduce the error** I can mark objects as Asset and they appear in the Asset Browser. However when I use the Asset Browser Search Bar nothing is found, all Assets just disappear out of the view. Works neither with names nor with tags. Testing with Default Cubes: - Use the outliner to mark a bunch of duplicated cubes as Assets one by one. Naming is Cube.001, Cube.002 etc. - They appear in the Asset Browser window. - Type "C" in the search bar - all cubes still visible, even one that I've named "Heiko". - Type the next letter "u" - all cubes dissapear from the Asset Browser view. I am not sure if it is a bug, or not implemented. But if not implemented - it should either do nothing, show a warning, or the UI element shouldn't even be there or be greyed out. Since the Asset Browser is the only new Feature in 3.0 for now I am quite confused why it is not working and I guess others will be too... Thanks for looking at this, <3 Blender! Test file : [#87627.blend](https://archive.blender.org/developer/F9990747/T87627.blend)
Author

Added subscriber: @JanAhrens

Added subscriber: @JanAhrens

Added subscriber: @AniMysterio

Added subscriber: @AniMysterio

this also happened to my laptop
1.JPG
2.JPG

this also happened to my laptop ![1.JPG](https://archive.blender.org/developer/F9990428/1.JPG) ![2.JPG](https://archive.blender.org/developer/F9990432/2.JPG)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Issue is reproducible for me as well. Tested on 3.0.0 alpha, Hash: 112fb77157.

Issue is reproducible for me as well. Tested on 3.0.0 alpha, Hash: 112fb77157e.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

This is one of the many remaining tasks for the Asset Browser to be production/release ready. But this one I find particularly important, searching is crucial for asset browsing.

This is one of the many remaining tasks for the Asset Browser to be production/release ready. But this one I find particularly important, searching is crucial for asset browsing.
Contributor

Added subscriber: @AndresStephens

Added subscriber: @AndresStephens
Contributor

Can confirm, search doesn't work with Collections. Mesh data yes. Material nodes can be limited.

Can confirm, search doesn't work with Collections. Mesh data yes. Material nodes can be limited.
Sybren A. Stüvel self-assigned this 2021-10-25 16:13:05 +02:00

The search is still just operating on the filename that contains the assets. This would also explain when we didn't run into this problem while using our Spring-based mockup project; there the hand-poses for Spring are stored in poses_spring_hand.blend, and thus searching for "hand" or "spring" would produce the expected results.

I have a patch ready to fix this ;-)

The search is still just operating on the filename that contains the assets. This would also explain when we didn't run into this problem while using our [Spring](https://studio.blender.org/films/spring/)-based mockup project; there the hand-poses for Spring are stored in `poses_spring_hand.blend`, and thus searching for "hand" or "spring" would produce the expected results. I have a patch ready to fix this ;-)

This issue was referenced by 6da63b19ff

This issue was referenced by 6da63b19fff2f690aa155bfd877cb8574d8c2987

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87627
No description provided.