Fix T87627: Asset Browser Search Bar not working

The asset browser search bar was filtering on the filename containing the
asset, and not the asset name. This is now fixed.